--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Buy-Cook</string>
     <string name="how_to_cook">How to cook:</string>
-    <string name="chosen_recipes">Chosen recipes</string>
+    <string name="chosen_recipes">Portions count</string>
     <string name="ingredients_required">Ingredients required</string>
     <string name="minus_button">-</string>
     <string name="plus_button">+</string>
